# dpdk-wrapper

./: Cargo.toml  build-dpdk.sh  build.rs
examples/: bound_client_server.rs  client_server.rs
src/: allocator.rs  bindings.rs  inlined.c  lib.rs  mem.rs  socket.rs  utils.rs  wrapper.rs
