[package]
name = "dpdk-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.5"
tracing = "0.1"
byteorder = "1"
eui48 = "1"
flume = "0.10"
toml = "0.5"
ahash = "0.7"

[build-dependencies]
bindgen = "0.59"
cc = "1"

[dev-dependencies]
bincode = "1"
serde = { version = "1", features = ["derive"] }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
